# RMIT-Hackathon

./: .gitignore  My_workflow3.json  README.md
backend/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
backend/.github/workflows/: ci.yml
backend/app/: auth_dep.py  crypto.py  main.py  supa.py
backend/src/rmit_one/: cli.py
backend/tests/: test_basic.py
frontend/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
frontend/src/: index.html  main.ts  styles.css
frontend/src/app/: app.component.css  app.component.ts  app.routes.ts  authservice.ts
frontend/src/app/guards/: auth.guard.ts
frontend/src/app/pages/dashboard/: dashboard.component.css  dashboard.component.html  dashboard.component.ts
frontend/src/app/pages/dashboard/chat-view/: chat-view.component.css  chat-view.component.html  chat-view.component.ts
frontend/src/app/pages/dashboard/find-classmate/: find-classmate.component.css  find-classmate.component.html  find-classmate.component.ts
frontend/src/app/pages/dashboard/rmit-chat/: rmit-chat.component.css  rmit-chat.component.html  rmit-chat.component.ts
frontend/src/app/pages/login/: login.component.css  login.component.html  login.component.ts
frontend/src/app/pages/rmit-loader/: rmit-loader.component.css  rmit-loader.component.html  rmit-loader.component.ts
frontend/src/app/pages/signup/: signup.component.css  signup.component.html  signup.component.ts
frontend/src/app/services/: auth.service.ts
